--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,6 +4,7 @@
     top: 0;
     left: 0;
     background-color: var(--bg-primary);
+    z-index: 2;
 }
 
 .nav-wrapper {
@@ -20,10 +21,8 @@
 }
 
 .logo-container a {
-  font-size: var(--size-2xl);
+  font-size: var(--size-3xl);
   color: var(--color-slate100);
-  text-transform: uppercase;
-  font-weight: 800;
 }
 
 .desktop-nav ul {
