--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -11,14 +11,23 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding-block: 0.5em;
 }
 
 .logo-container {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 0.5em;
 }
+
+.logo-container img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden;
+  object-fit: cover;
+}
+
 
 .logo-container a {
   font-size: var(--size-3xl);
@@ -39,7 +48,7 @@
 
 
 .desktop-nav ul li a {
-  padding: 0.8em;
+  padding-inline: 0.8em;
   font-size: var(--size-m);
   color: var(--indigo);
   border-radius: 0.2em;
