--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -50,7 +50,7 @@
 .desktop-nav ul li a {
   padding-inline: 0.8em;
   font-size: var(--size-m);
-  color: var(--indigo);
+  color: var(--accent);
   border-radius: 0.2em;
 }
 
