--- a/src/components/ProjectsView.css
+++ b/src/components/ProjectsView.css
@@ -40,12 +40,13 @@
 .project-card {
     display: flex;
     flex-direction: column;
-    background-color: var(--color-slate100);
-    color: var(--bg-primary);
-    border-radius: 0.5rem;
+    border-radius: 0.8rem;
     padding: 1.2rem;
     width: 100%;
-}
+
+    box-shadow: 0 4px 12px var(--color-slate600);
+
+  }
 
 .project-card-thumbnail {
     width: 100%;
@@ -54,13 +55,16 @@
     border-radius: 0.5rem;
     object-fit: cover;
     overflow: hidden;
-    background-color: var(--color-slate300);
+    background-color: var(--color-slate400);
+
+
 }
 
 .project-card-thumbnail img {
     width: 100%;
     height: 100%;
     object-fit: cover;
+
 }
 
 .project-card-thumbnail .image-icon {
@@ -70,6 +74,8 @@
     align-items: center;
     justify-content: center;
     color: var(--color-slate600);
+    box-shadow: inset 0 3px 12px var(--color-slate600);
+
 }
 
 
