--- a/src/components/ProjectsView.css
+++ b/src/components/ProjectsView.css
@@ -14,7 +14,7 @@
     justify-content: center;
     gap: 0.3em;
     font-size: var(--size-m);
-    color: var(--color-slate100);
+    /* color: var(--color-slate100); */
 }
 .projects-grid {
   display: grid;
