--- a/src/components/ProjectsView.css
+++ b/src/components/ProjectsView.css
@@ -1,5 +1,5 @@
 .projects-view {
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 .projects-view-title-container {
@@ -14,12 +14,11 @@
     justify-content: center;
     gap: 0.3em;
     font-size: var(--size-m);
-    /* color: var(--color-slate100); */
 }
 .projects-grid {
   display: grid;
-  gap: 2rem;
-  margin-top: 2rem;
+  gap: 3rem;
+  margin-block: 1.5rem;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
 }
 
