--- a/src/components/ProjectsView.css
+++ b/src/components/ProjectsView.css
@@ -48,6 +48,7 @@
   }
 
 .project-card-thumbnail {
+    position: relative;
     width: 100%;
     height: auto;
     aspect-ratio: 4 / 3;
@@ -56,8 +57,9 @@
     overflow: hidden;
     background-color: var(--color-slate400);
 
-
+    border: 2px solid var(--color-slate100);
 }
+
 
 .project-card-thumbnail img {
     width: 100%;
@@ -78,13 +80,40 @@
 }
 
 
-.project-card-title {
-    
-}
 .project-card-description {
+  line-height: 1.4em;
     
 }
 
 .project-card-platforms {
   margin-block: 1rem;
+}
+
+.modal-backdrop {
+  position: fixed;
+  top: 0; 
+  left: 0;
+  width: 100svw; 
+  height: 100svh;
+  background-color: rgba(0, 0, 0, 0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  max-width: 90vw;
+  max-height: 80vh;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  cursor: auto;
+  aspect-ratio: 4/3;
+}
+
+.modal-content img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
 }
