--- a/src/components/ProjectsView.css
+++ b/src/components/ProjectsView.css
@@ -1,6 +1,3 @@
-.projects-view {
-    /* min-height: 100vh; */
-}
 
 .projects-view-title-container {
     display: flex;
@@ -31,6 +28,7 @@
 @media (max-width: 480px) {
   .projects-grid {
     grid-template-columns: 1fr;
+    gap: 3rem;
   }
 }
 
