Updated the navbar for mobile

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -3,7 +3,6 @@
     position: sticky;
     top: 0;
     left: 0;
-    /* background-color: var(--bg-primary); */
     z-index: 2;
 }
 
@@ -11,7 +10,6 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    /* padding-block: 1em; */
 }
 
 .logo-container {
@@ -36,10 +34,8 @@
 }
 
 .desktop-nav {
-    margin-block-start: 0.8rem;
-    /* background-color: var(--color-slate100); */
+    margin-block-start: 0.1rem;
     width: max-content;
-    border-radius: 10em;
 }
 
 .desktop-nav ul {
@@ -89,3 +85,17 @@
   background-color: var(--bg-primary);
 }
 
+
+@media (max-width: 768px) {
+  .desktop-nav-section {
+    background-color: var(--bg-primary);
+  }
+  .nav-wrapper {
+    justify-content: center;
+  }
+
+  .desktop-nav ul li a, .toggle-theme-btn {
+    padding: 1.1rem;
+  }
+
+}
