--- a/src/components/ProjectsView.css
+++ b/src/components/ProjectsView.css
@@ -42,6 +42,7 @@
     width: 100%;
 
     box-shadow: 0 4px 12px var(--color-slate600);
+    /* box-shadow: inset 0 0 12px var(--color-slate600); */
 
   }
 
