--- a/src/components/ProjectsView.css
+++ b/src/components/ProjectsView.css
@@ -44,6 +44,8 @@
     box-shadow: 0 4px 12px var(--color-slate600);
     /* box-shadow: inset 0 0 12px var(--color-slate600); */
 
+    will-change: transform, opacity;
+
   }
 
 .project-card-thumbnail {
